--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ webdriver-manager = "^4.0.2"
 xdist = "^0.0.2"
 pytest-xdist = "^3.6.1"
 flake8-pyproject = "^1.2.3"
+python-dotenv = "^1.0.1"
 
 [tool.flake8]
 max-line-length = 100
