--- a/pytest.ini
+++ b/pytest.ini
@@ -2,3 +2,8 @@
 addopts = -v --tb=short
 testpaths = tests/
 python_files = test_*.py
+
+log_cli = true
+log_level = INFO
+log_cli_format = %(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)
+log_cli_date_format=%Y-%m-%d %H:%M:%S
