--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,8 @@ xdist = "^0.0.2"
 pytest-xdist = "^3.6.1"
 flake8-pyproject = "^1.2.3"
 python-dotenv = "^1.0.1"
+pydantic = "^2.10.6"
+requests = "^2.32.3"
 
 [tool.flake8]
 max-line-length = 100
